--- a/Components/Pages/Workshops.razor
+++ b/Components/Pages/Workshops.razor
@@ -108,7 +108,7 @@
         new WorkshopModel { Title = "VisualStudio", Description = "Entwickle dein erstes eigenes Projekt in C# mit Visual Studio und .NET.", Image = "images/visualstudio.gif" },
         new WorkshopModel { Title = "Podcast", Description = "Plane, produziere und veröffentliche deinen eigenen Podcast.", Image = "images/podcast.jpg" },
         new WorkshopModel { Title = "3DPrinter", Description = "Lerne, wie du 3D-Modelle erstellst und mit dem 3D-Drucker zum Leben erweckst.", Image = "images/3dprinter.gif" },
-        new WorkshopModel { Title = "Bildbearbeitung", Description = "Bearbeite Bilder professionell mit Photoshop oder GIMP.", Image = "images/bildbearbeitung.gif" }
+        new WorkshopModel { Title = "Bildbearbeitung", Description = "Bearbeite Bilder professionell mit Photoshop oder GIMP.", Image = "bildbearbeitung.gif" }
     };
 
     private string UserName = "";
@@ -526,3 +526,4 @@
         margin-bottom: 1rem;
     }
 </style>
+
