--- a/Components/Pages/Kalender.razor
+++ b/Components/Pages/Kalender.razor
@@ -1,4 +1,4 @@
-﻿@page "/kalender"
+@page "/kalender"
 @rendermode InteractiveServer
 
 @using System.Globalization
@@ -110,7 +110,7 @@
 @code {
     private readonly CultureInfo deutsch = new CultureInfo("de-DE");
     private List<CalendarDay> calendarDays = new();
-    private DateTime aktuelleZeit = DateTime.Now;
+    private DateTime aktuelleZeit;
 
     private List<Buchung> buchungen = new();
 
@@ -144,7 +144,12 @@
 
     private async Task LadeAktuelleZeit()
     {
-        aktuelleZeit = await TimeService.GetNetworkTimeAsync();
+        // Hole die UTC-Zeit vom TimeService
+        var utcNow = await TimeService.GetNetworkTimeAsync();
+
+        // Konvertiere auf deutsche Zeit (Europe/Berlin) inkl. Sommerzeit
+        TimeZoneInfo berlin = TimeZoneInfo.FindSystemTimeZoneById("Europe/Berlin");
+        aktuelleZeit = TimeZoneInfo.ConvertTimeFromUtc(utcNow, berlin);
     }
 
     private void ErzeugeKalender()
@@ -168,7 +173,7 @@
                     var start = new DateTime(aktuellerTag.Year, aktuellerTag.Month, aktuellerTag.Day, slotInfo.Stunde, slotInfo.Minute, 0);
                     var end = start.AddMinutes(slotInfo.DauerMin);
 
-                    // Sperre den Slot exakt ab Endzeit
+                    // Vergangene Slots korrekt nach Berlin-Zeit sperren
                     bool slotInVergangenheit = aktuelleZeit >= end;
 
                     bool slotBelegt = buchungen.Any(b =>
@@ -177,12 +182,12 @@
                         b.Uhrzeit < end.TimeOfDay);
 
                     day.TimeSlots.Add(new TimeSlot
-                        {
-                            Start = start,
-                            End = end,
-                            IsFree = !slotInVergangenheit && !slotBelegt,
-                            Typ = slotInfo.Typ
-                        });
+                    {
+                        Start = start,
+                        End = end,
+                        IsFree = !slotInVergangenheit && !slotBelegt,
+                        Typ = slotInfo.Typ
+                    });
                 }
 
                 calendarDays.Add(day);
@@ -218,13 +223,13 @@
             }
 
             liste.Add(new Buchung
-                {
-                    Datum = datum,
-                    Uhrzeit = zeit,
-                    Klasse = parts[2],
-                    Schueler = parts[3],
-                    Klassencode = parts[4]
-                });
+            {
+                Datum = datum,
+                Uhrzeit = zeit,
+                Klasse = parts[2],
+                Schueler = parts[3],
+                Klassencode = parts[4]
+            });
         }
 
         return liste;
