--- a/Components/Pages/Buchung.razor
+++ b/Components/Pages/Buchung.razor
@@ -128,7 +128,7 @@
     private Dictionary<string, string> klasseCodes = new();
 
     private string BuchungenPath => Path.Combine(Env.ContentRootPath, "Data", "buchungen.txt");
-    private string KlasseCodesPath => Path.Combine(Env.ContentRootPath, "Data", "klassenCodes.txt");
+    private string KlasseCodesPath => Path.Combine(Env.ContentRootPath, "Data", "klassencodes.txt");
 
     private string zeitAnzeige = "";
     private System.Timers.Timer zeitTimer;
@@ -329,3 +329,4 @@
         }
     }
 }
+
